# polymarket

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  DEPLOY_SIMPLE.md  Dockerfile  README.md  supabase-schema.sql
backend/: .env.example  DEPLOY_FLYIO.bat  START_LOCAL.bat  fly.toml  package-lock.json  package.json  server.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ControlPanel.jsx  Header.jsx  LoginScreen.jsx  MarketsPanel.jsx  OpportunitiesPanel.jsx  PerformancePanel.jsx  PnLCard.jsx  SettingsPanel.jsx  StrategiesPanel.jsx  StrategyAnalytics.jsx  TradesHistory.jsx
frontend/src/services/: backendApi.js  polymarketApi.js  polymarketLive.js  supabaseClient.js  telegramApi.js  tradingApi.js
src/: bot.rs  clob.rs  config.rs  lib.rs  main.rs  strategies.rs  types.rs  ui.rs
